# Fake-Zertifikatshop-API

./: .gitignore  CHANGELOG.md  Dockerfile  README.md  cliff.toml  docker-compose.yml.example  pyproject.toml
.gitea/workflows/: build-nightly.yml  build-release.yml  release.yml  sync-github.yml
src/backend/: admin.py  database.py  main.py  models.py  seed.py
static/: openapi.yml
tests/: test_products.py  utils.py
